# inbfwetrust

./: .gitignore  CMakeLists.txt  README.md  bf.c  bf.h  data.h  data_4096.h  main_croco.c  mingw_cross_toolchain.cmake
crypto/: aes-ni.c  aes-ni.h
